# ml-worker-service

./: .dockerignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: deploy.yml
prompts/: system.txt  system_parse.txt
src/: main.py
src/app/: __init__.py  config.py  main.py
src/app/utils/: __init__.py  cors.py  lifespan.py
src/schemas/: __init__.py  base_message.py  categories_response.py  category_level_1_enum.py  category_level_2_enum.py  emotion_enum.py  processed_message.py  sentiment_enum.py
src/services/kafka/: __init__.py  config.py  kafka_service.py  service.py
src/services/ml/: __init__.py  base.py  config.py  emotions.py  language.py  pipeline.py  sentiment.py
src/services/qwen-api/: __init__.py  config.py  qwen_service.py
src/services/qwen_api/: __init__.py  config.py  service.py
