[project]
name = "ml-worker-service"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiokafka>=0.12.0",
    "asyncer>=0.0.8",
    "fastapi[standard]>=0.121.3",
    "openai>=2.8.1",
    "pydantic-settings>=2.12.0",
    "transformers>=4.40.0",
    "torch>=2.0.0",
    "accelerate>=1.12.0",
    "sentencepiece>=0.2.0",
]

[project.scripts]
server = "src.main.run"

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[tool.uv.sources]
torch = { index = "pytorch-cpu" }

[tool.ruff]
# Exclude a variety of commonly ignored directories.
exclude = [".git", ".venv", ".vscode", "__pypackages__", "venv"]

line-length = 102
indent-width = 2


[tool.ruff.lint]
fixable = ["ALL"]
unfixable = []

[tool.ruff.format]
quote-style = "double"

indent-style = "space"
